--- a/index.css
+++ b/index.css
@@ -1,7 +1,10 @@
 *{
     margin: 0px;
     padding: 0px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    box-sizing: border-box;
+    -webkit-tap-highlight-color: transparent;
+    font-family: Gilroy, Arial, sans-serif;
+    outline: none;
 
 }
 body{
@@ -14,4 +17,30 @@ body{
     justify-content: space-between;
     border: 1px solid lightslategray;
     align-items: center;
+}
+.card-body{
+    padding-left: 125px;
+    padding-right: 125px;
+}
+
+
+.res-card{
+    width: 300px;
+    height: 100%;
+    padding: 1px;
+    border: "1px solid lightgray";
+    margin: 5px;
+   
+  
+
+}
+.res-container{
+    display: flex;
+    flex-wrap: wrap;
+}
+.res-logo{
+    padding: 5px;
+    width: 100%;
+    border-radius: 16px;
+    filter: drop-shadow(rgba(0, 0, 0, 0.1) 0px 2px 8px);
 }
